infrastructure/istio_authorization_policy.yaml
apiVersion: security.istio.io/v1
kind: AuthorizationPolicy
metadata:
  name: servicea
spec:
  selector:
    matchLabels:
      app: serviceA
      service: servicea
  action: ALLOW
  rules:
  - from:
    - source:
        principals: 
        - cluster.local/ns/projectA/sa/service3
        - cluster.local/ns/projectA/sa/serviceB
        - cluster.local/ns/projectA/sa/serviceB
        - cluster.local/ns/projectA/sa/service3
        - cluster.local/ns/projectA/sa/service3
